# app/api/v1/routes/listTrack.js
@@ -1,8 +1,0 @@
-const express = require("express");
-
-const { listTrack } = require("../controllers/listTrackController");
-
-const router = express.Router();
-router.route("/").get(listTrack);
-
-module.exports = router;
